samples/_failures_safe/1761365673_d59834_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cc69f39.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
